--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+
+	maven {
+        name = 'Ladysnake Mods'
+        url = 'https://ladysnake.jfrog.io/artifactory/mods'
+    }
 }
 
 dependencies {
@@ -26,6 +31,19 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+
+ 	// Adds a dependency on the base cardinal components module (required by every other module)
+    // Replace modImplementation with modApi if you expose components in your own API
+    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:4.1.4"
+    // Adds a dependency on a specific module
+    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-level:4.1.4"
+
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-scoreboard:4.1.4"
+    // Includes Cardinal Components API as a Jar-in-Jar dependency (optional)
+    include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:4.1.4"
+    include "dev.onyxstudios.cardinal-components-api:cardinal-components-level:4.1.4"
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-scoreboard:4.1.4"
 }
 
 processResources {
