--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,14 @@ dependencies {
     modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-level:4.1.4"
 
 	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-scoreboard:4.1.4"
+
+
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-world:4.1.4"
     // Includes Cardinal Components API as a Jar-in-Jar dependency (optional)
     include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:4.1.4"
     include "dev.onyxstudios.cardinal-components-api:cardinal-components-level:4.1.4"
 	include "dev.onyxstudios.cardinal-components-api:cardinal-components-scoreboard:4.1.4"
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-world:4.1.4"
 }
 
 processResources {
