Pin fix and minor fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.0.2
 	maven_group = com.example
-	archives_base_name = BrokNSindrisTrinkets
+	archives_base_name = BrokNSindrisTrinkets-1.18
 
 # Dependencies
 	fabric_version=0.47.8+1.18.2
