--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.12-SNAPSHOT'
+	id 'fabric-loom' version '0.11-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -35,19 +35,19 @@ dependencies {
 
  	// Adds a dependency on the base cardinal components module (required by every other module)
     // Replace modImplementation with modApi if you expose components in your own API
-    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:5.0.0-beta.1"
+    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:4.1.4"
     // Adds a dependency on a specific module
-    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-level:5.0.0-beta.1"
+    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-level:4.1.4"
 
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-scoreboard:5.0.0-beta.1"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-scoreboard:4.1.4"
 
 
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.0.0-beta.1"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-world:4.1.4"
     // Includes Cardinal Components API as a Jar-in-Jar dependency (optional)
-    include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:5.0.0-beta.1"
-    include "dev.onyxstudios.cardinal-components-api:cardinal-components-level:5.0.0-beta.1"
-	include "dev.onyxstudios.cardinal-components-api:cardinal-components-scoreboard:5.0.0-beta.1"
-	include "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.0.0-beta.1"
+    include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:4.1.4"
+    include "dev.onyxstudios.cardinal-components-api:cardinal-components-level:4.1.4"
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-scoreboard:4.1.4"
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-world:4.1.4"
 }
 
 processResources {
