--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,7 @@ repositories {
         url = 'https://ladysnake.jfrog.io/artifactory/mods'
     }
 
-	 maven { 
-		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' 
-	}
+	 maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
 }
 
 dependencies {
